syntax = "proto3";

message NewBlockID{
    bytes block_id = 1;
}